--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div class="col-12">
 					<nav class="navbar navbar-expand-md navbar-light">
 					
-						<a class="navbar-brand" href="#" target="_blank"><img href="img/logonav].png" alt=""></a>	
+						<a class="navbar-brand" href="#" target="_blank"><img href="img/logonav.png" alt=""></a>	
 						
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
@@ -66,7 +66,7 @@
 					<p class="lead grey-text text-center w-responsive mx-auto mb-5">A Candy World tem como objetivo preparar os doces mais gostosos e divertivos com ingredientes inusitados que fazem a diferença na hora da sua degustação.</p>
                 <div class="row">
                     <div class="col-lg-5 text-center text-lg-left">
-                        <img class="img-fluid" src="img/p10.jpg.crdownload" alt="Sample image">
+                        <img class="img-fluid" src="img/p10.png" alt="Sample image">
                     </div>
                     <div class="col-lg-7">
                         <div class="row mb-3">
